jvmtiRedefineClasses.cpp: guarantee(false) failed: OLD and/or OBSOLETE method(s) found

XMLWordPrintable

    • b15
    • Verified

        # Internal Error (/opt/jprt/T/P1/183545.vkozlov/s/src/share/vm/prims/jvmtiRedefineClasses.cpp:3598), pid=24710, tid=5
        # guarantee(false) failed: OLD and/or OBSOLETE method(s) found

        V [libjvm.so+0x292c304] void VMError::report(outputStream*)+0x92c;; __1cHVMErrorGreport6MpnMoutputStream__v_+0x92c
        V [libjvm.so+0x292d84d] void VMError::report_and_die()+0x579;; __1cHVMErrorOreport_and_die6M_v_+0x579
        V [libjvm.so+0x1002147] void report_vm_error(const char*,int,const char*,const char*)+0x55f;; __1cPreport_vm_error6Fpkci11_v_+0x55f
        V [libjvm.so+0x1ce8f33] void VM_RedefineClasses::CheckClass::do_klass(Klass*)+0x337;; __1cSVM_RedefineClassesKCheckClassIdo_klass6MpnFKlass__v_+0x337
        V [libjvm.so+0xe19cf5] void ClassLoaderDataGraph::classes_do(KlassClosure*)+0x55;; __1cUClassLoaderDataGraphKclasses_do6FpnMKlassClosure__v_+0x55
        V [libjvm.so+0x1cbc850] void VM_RedefineClasses::doit()+0x3e0;; __1cSVM_RedefineClassesEdoit6M_v_+0x3e0
        V [libjvm.so+0x295d630] void VM_Operation::evaluate()+0x114;; __1cMVM_OperationIevaluate6M_v_+0x114
        V [libjvm.so+0x2959ad0] void VMThread::evaluate_operation(VM_Operation*)+0x1fc;; __1cIVMThreadSevaluate_operation6MpnMVM_Operation__v_+0x1fc
        V [libjvm.so+0x295a7b4] void VMThread::loop()+0x870;; __1cIVMThreadEloop6M_v_+0x870
        V [libjvm.so+0x29595b6] void VMThread::run()+0xb6;; __1cIVMThreadDrun6M_v_+0xb6
        V [libjvm.so+0x22f7b56] java_start+0x1ce;; java_start+0x1ce
        C [libc.so.1+0x121555] _thrp_setup+0xa5;; _thrp_setup+0xa5
        C [libc.so.1+0x121800] _lwp_start+0x0;; _lwp_start+0x0

        # JRE version: Java(TM) SE Runtime Environment (8.0-b126) (build 1.8.0-fastdebug-b126)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (25.0-b62-internal-201401291835.vkozlov.8033117-fastdebug compiled mode solaris-amd64 )

        It starts to fail after PPC64 integration.

              Assignee:
              Serguei Spitsyn
              Reporter:
              Vladimir Ivanov
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

                Created:
                Updated:
                Resolved: