8042796: jvmtiRedefineClasses.cpp: guarantee(false) failed: OLD and/or OBSOLETE method(s) found

Relax the guaranty for deleted methods

Reviewed-by: dcubed, coleenp